# tkyc

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: delete-branch-after-merge.yml  prevent_del_dev.yaml
Docker/: Dockerfile  docker-compose.yaml
tests/: test_my_func.py  test_tkyc.py
tkyc/: __init__.py  my_module.py  pyproject.toml
tkyc/tests/: test_my_array.py
tkyc/tkyc/: my_module.py
