[tool.poetry]
name = "tkyc"
version = "0.1.4"
description = "For verification of library development"
authors = ["openaging <open.aging.info@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
sphinx = "^7.2"
pytest = "^8.1"
flake8 = "^7.0"
urllib3 = "1.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
