[tool.poetry]
name = "tkyc"
version = "0.1.0"
description = "For verification of library development"
authors = ["openaging <open.aging.info@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
